# Practica_Docker

./: CMakeLists.txt  README.md  dockerfile
